Fixes for mobiles layout issues

--- a/app/assets/stylesheets/confirmation.scss
+++ b/app/assets/stylesheets/confirmation.scss
@@ -27,7 +27,7 @@
   }
 
   div,
-  .help-notice {
+  .warning {
     border-top: 1px solid $grey-3;
   }
 
@@ -38,6 +38,14 @@
 
     @include media(tablet) {
       padding-right: 0;
+    }
+
+    &.notice {
+      padding-right: 0;
+
+      @include media(tablet) {
+        padding-right: 5.5em;
+      }
     }
 
     h3,
@@ -112,7 +120,7 @@
     }
   }
 
-  .help-notice {
+  .warning {
     padding: 1.6em 0 0 3em;
     background-position: 0 1.25em;
 
