--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -112,6 +112,7 @@ input.text,
 input.long,
 .twitter-typeahead {
   width: 100%;
+  box-sizing: border-box;
 }
 
 input.text {
